--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
+    "@types/react": "18.2.27",
     "entities": "^2.0.3",
     "js-cookie": "^2.2.1",
     "postcss": "^8.4.4",
